<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.SchoolListActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_size_10"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/radius_size_5"
        app:cardElevation="@dimen/radius_size_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_size_10">

            <TextView
                android:id="@+id/tvSchoolName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height_1"
                android:layout_marginVertical="@dimen/margin_size_5"
                android:background="@color/light_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="@dimen/small_text_size" />

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/medium_text_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_size_10"
                        android:text="@string/website"
                        android:textSize="@dimen/small_text_size" />

                    <TextView
                        android:id="@+id/tvWebsite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_text_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_size_10"
                        android:text="@string/language"
                        android:textSize="@dimen/medium_text_size" />

                    <TextView
                        android:id="@+id/tvLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_students"
                        android:textSize="@dimen/small_text_size" />

                    <TextView
                        android:id="@+id/tvTotalStudents"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_text_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_size_10"
                        android:text="@string/city"
                        android:textSize="@dimen/small_text_size" />

                    <TextView
                        android:id="@+id/tvCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_text_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_size_10"
                        android:text="@string/attendance_rate"
                        android:textSize="@dimen/small_text_size" />

                    <TextView
                        android:id="@+id/tvAttendance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_text_size" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/llLabel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_size_30"
        android:layout_marginHorizontal="@dimen/margin_size_10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".61"
            android:background="@color/grey"
            android:gravity="center"
            android:text="@string/label"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />

        <View
            android:layout_width="@dimen/line_height_2"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".41"
            android:background="@color/grey"
            android:gravity="center"
            android:text="@string/score"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_size_10"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:background="@drawable/border_black"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_size_5"
                android:text="@string/number_of_sat_tackers"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size"
                tools:ignore="RtlSymmetry" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height_1"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_size_5"
                android:text="@string/critical_avg_score"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size"
                tools:ignore="RtlSymmetry" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height_1"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_size_5"
                android:text="@string/sat_math_avg_score"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size"
                tools:ignore="RtlSymmetry" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height_1"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_size_5"
                android:text="@string/sat_writing_avg_score"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:background="@drawable/border_black_"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSatTestTakers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height_1"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvCriticalAvg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height_1"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvMathAvg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height_1"
                android:background="@color/black" />

            <TextView
                android:id="@+id/tvWritingAvg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>